# bedrock-agent

./: README.md
.github/workflows/: agent-code-review.yml  agentcore.yml  cd-deploy.yml  ci-agent.yml
agentcore/: .env.deploy  .env.local.example  agentcore.json  aws-targets.example.json  aws-targets.json
agentcore/.cli/: deployed-state.json
agentcore/cdk/: package-lock.json  package.json  tsconfig.json
app/MyAgent/: README.md  main.py  pyproject.toml
app/MyAgent/github/: client.py
app/MyAgent/mcp_client/: client.py
app/MyAgent/model/: load.py
app/MyAgent/review/: payload.py  prompts.py  scope.py
app/MyAgent/tests/: test_scope.py
app/MyAgent/tools/: github_tools.py
docs/: AWS_CICD.md  CODE_REVIEW.md  TESTING.md
scripts/: build_review_payload.py  check_review_result.py  deploy-dev.ps1  example-pr-payload.json  recover-dev-stack.ps1  test-denied-payload.json  test-security-payload.json  test_scope.py
